--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,46 @@
  *= require_tree .
  *= require_self
  */
+
+  *{
+    margin: 0;
+    padding: 0;
+  }
+
+  main{
+    height: 80vh;
+    background-color: green;
+  }
+
+ nav{
+  display: flex;
+  height: 10vh;
+  background-color: blue;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 15px;
+ }
+
+ footer{
+  justify-content: space-between;
+  display: flex;
+  height: 10vh;
+  align-items: center;
+  padding: 0 15px;
+ }
+
+ .logo {
+   height: 60%;
+   width: 100px;
+   background-color: red;
+ }
+
+ .nav-links {
+  height: 20px;
+ }
+
+ .featured {
+   height: 50vh;
+   width: 100vw;
+  background-color: yellow;
+ }
