--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -1,3 +1,24 @@
 // Place all the styles related to the categories controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+ .featured {
+   height: 50vh;
+   width: 100%;
+  background-color: yellow;
+ }
+
+ .four-best{
+   height:30vh;
+   width: 100%;
+   display: flex;
+ }
+
+ .one-of-four{
+   height: 100%;
+   width: 25%;
+   background-color: #7a7a7a; }
+
+ .one-of-four:nth-child(odd){
+   background-color: #b5b5b5;
+ }
