fix article model errors

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,8 +33,7 @@
   main{
     height: 80vh;
     width: 100%;
-    background-color: green;
-  }
+   }
 
  nav{
   display: flex;
@@ -43,6 +42,10 @@
   align-items: center;
   justify-content: space-between;
   padding: 0 15px;
+ }
+
+ nav a{
+  color: grey;
  }
 
  footer{
@@ -54,14 +57,45 @@
  }
 
  input{
+   margin-top: 10px;
   width: 300px;
   height: 40px;
   display: block;
 }
 
-.button{
-  margin-top: 10px;
+a{
+  color: orange;
+  text-decoration: none;
 }
+
+.orange {
+  color: orange;
+}
+
+.title{
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
+.form{
+  background-color: white;
+  width: 70vw;
+  height: 50vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.button{
+  margin-top: 15px;
+}
+
+.nav-logo{
+  height: 60%;
+   width: 100px;
+}
+
  .logo {
    height: 60%;
    width: 100px;
