--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,5 +1,5 @@
 <div class="featured">
-  Featured Story
+  <%= render 'featured' %>
 </div>
 <div class="four-best">
   <div class="one-of-four"></div>
