--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
   <body>
    <nav>
-      <img src="/" alt="logo" class="logo">
+      <a href="/" class="nav-logo"><img src="/" alt="logo" class="logo"></a>
       <div class="nav-links">
         <a href="/" class="nav-link">Home</a>
         <a href="/" class="nav-link">Write an Article</a>
