--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
    <nav>
       <a href="/" class="nav-logo"><img src="/" alt="logo" class="logo"></a>
       <div class="nav-links">
+        <%= logged_in_as %>
         <a href="/" class="nav-link">Home</a>
         <a href="/" class="nav-link">Write an Article</a>
       </div>
