--- a/app/views/users/_form-signup.html.erb
+++ b/app/views/users/_form-signup.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(:session, url: login_path) do |f| %>
+<%= simple_form_for(:user, url: signup_path) do |f| %>
     <div class="field">
       <%= f.label :name, 'Name: ' %>
       <%= f.input_field :name,
