change font nav

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -47,6 +47,13 @@
 
  nav a{
   color: grey;
+  text-transform: uppercase;
+  margin: 0 5px;
+  font-size: 0.9rem;
+ }
+
+ nav a:hover{
+  color: #fe6001;
  }
 
  footer{
@@ -61,7 +68,7 @@
  }
 
  input{
-   margin-top: 10px;
+   margin: 10px 0;
   width: 300px;
   height: 40px;
   display: block;
@@ -71,6 +78,13 @@ a{
   color: #fe6001;
   text-decoration: none;
 }
+
+label{
+  font-size: 1rem;
+  font-weight: bolder;
+ color: #fe6001;
+}
+
 
 .center{
   display: flex;
@@ -102,6 +116,12 @@ a{
 
 .privacy-terms{
   padding-right: 20px;
+}
+
+
+.button{
+  cursor: pointer;
+  margin: 15px 0;
 }
 
 .social{
@@ -144,7 +164,8 @@ a{
 .form{
   background-color: white;
   width: 70vw;
-  height: 50vh;
+  height: auto;
+  padding: 50px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -181,3 +202,9 @@ a{
    align-items: center;
    justify-content: center;
  }
+
+
+.other-form{
+  font-size: 1.2rem;
+  margin-top: 5px;
+}
