--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,6 +4,6 @@
     <h1>REGISTER</h1>
     <%= render 'form-signup', session: @user %>
     <p>Already have an account? </p>
-    <%= link_to 'Log In', login_path, method: :get %>
+    <%= link_to 'Log In', login_path, method: :get, class: 'other-form' %>
   </div>
 </div>
