add methods and partials for categories rows

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -114,8 +114,16 @@ label{
   width: 60%;
 }
 
+.privacy-and-copyright a:hover{
+  color: white;
+}
+
 .privacy-terms{
   padding-right: 20px;
+}
+
+.privacy{
+  margin-right: 10px;
 }
 
 
