--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,9 +1,4 @@
 <div class="featured">
   <%= render 'featured' %>
 </div>
-<div class="four-best">
-  <div class="one-of-four"></div>
-  <div class="one-of-four"></div>
-  <div class="one-of-four"></div>
-  <div class="one-of-four"></div>
-</div>
+<%= categories_rows %>
