--- a/app/views/categories/_category_box.html.erb
+++ b/app/views/categories/_category_box.html.erb
@@ -1,4 +1,5 @@
 <span class="box">
   <h6 class="title"><%= category.name %></h6>
-  <p class="title"> <%= category.featured_article.title %> </p>
+  <% byebug %>
+  <p class="title"> <%= category.articles.most_voted.first.title if category.article? %> </p>
 </span>
