--- a/app/views/categories/_category_box.html.erb
+++ b/app/views/categories/_category_box.html.erb
@@ -1,5 +1,4 @@
 <span class="box">
   <h6 class="title"><%= category.name %></h6>
-  <% byebug %>
-  <p class="title"> <%= category.articles.most_voted.first.title if category.article? %> </p>
+  <p class="title"> <%= category.articles_ord_by_recent.first.title if category.article? %> </p>
 </span>
