--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,9 @@
 
         <a href="/" class="nav-link">Home</a>
         <a href="/" class="nav-link">Write an Article</a>
-        <%= logged_in_as %>
+
       </div>
+      <%= logged_in_as %>
     </nav>
 
     <%= flash_msg %>
@@ -32,7 +33,7 @@
       </div>
       <div class="privacy-and-copyright center">
         <span class="privacy-terms">
-          <a href="/" class="privacy">Privacy Policy</a> 
+          <a href="categories/index.html" class="privacy">Privacy Policy</a>
           <a href="/" class="terms">Terms & Conditions</a>
         </span>
         <span class="copyright">
