--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,11 +27,10 @@
     padding: 5px;
     width: 100vw;
     max-width: 100%;
-    height: 100vh;
   }
 
   main{
-    height: 80vh;
+    height: auto;
     width: 100%;
   }
 
@@ -68,7 +67,7 @@
  }
 
  input{
-   margin: 10px 0;
+  margin: 10px 0;
   width: 300px;
   height: 40px;
   display: block;
@@ -80,8 +79,8 @@ a{
 }
 
 label{
-  font-size: 1rem;
-  font-weight: bolder;
+ font-size: 1rem;
+ font-weight: bolder;
  color: #fe6001;
 }
 
@@ -150,15 +149,15 @@ label{
   background-size: contain;
 }
 
-.twitter{
-  background-image: url(../../../docs/twitter.png);
-}
-.instagram{
-  background-image: url(../../../docs/instagram.png);
-}
-.facebook{
-  background-image: url(../../../docs/facebook.png);
-}
+// .twitter{
+//   background-image: url(../../../docs/twitter.png);
+// }
+// .instagram{
+//   background-image: url(../../../docs/instagram.png);
+// }
+// .facebook{
+//   background-image: url(../../../docs/facebook.png);
+// }
 
 .orange {
   color: orange;
@@ -216,3 +215,20 @@ label{
   font-size: 1.2rem;
   margin-top: 5px;
 }
+
+.categories-rows{
+  display:flex;
+  width: 100vw;
+  max-width: 100%;
+  flex-wrap: wrap;
+}
+
+ .box{
+   width: 25%;
+   height: 30vh;
+   padding: 10px;
+   background-color: #7a7a7a;
+   display:flex;
+   flex-direction: column;
+   justify-content: space-between;
+ }
