add images of social

--- a/app/views/categories/_category_box.html.erb
+++ b/app/views/categories/_category_box.html.erb
@@ -1,4 +1,4 @@
 <span class="box">
   <p class="title"> <%= name %></p>
-  <p class="title"><%= article.title %> </p>
+  <p class="title"><%= article %> </p>
 </span>
