--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
       <div class="nav-links">
 
         <a href="/" class="nav-link">Home</a>
-        <a href="/" class="nav-link">Write an Article</a>
+        <a href="/new_article" class="nav-link">Write an Article</a>
 
       </div>
       <%= logged_in_as %>
@@ -41,10 +41,10 @@
         </span>
       </div>
       <div class="social">
-        <span class="connect">Connect with us:</span>
-        <a href="/"><span class="social-logo center twitter"></span></a>
-        <a href="/"><span class="social-logo center instagram"></span></a>
-        <a href="/"><span class="social-logo center facebook"></span></a>
+        <span class="connect">Connect with me:</span>
+        <a href="https://twitter.com/phfdonda"><span class="social-logo center twitter"> <img src="./docs/twitter.png" alt="t"> </span></a>
+        <a href="https://github.com/phfdonda"><span class="social-logo center github"><img src="./docs/twitter.png" alt="t"></span></a>
+        <a href="https://www.linkedin.com/in/pedro-donda/"><span class="social-logo center linkedin"><img src="./" alt="t"></span></a>
       </div>
     </footer>
   </body>
