--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,1 +1,8 @@
-New Article
+
+<div class="container">
+
+  <div class="form">
+    <h1>NEW ARTICLE</h1>
+    <%= render 'form-new-article', session: @user %>
+  </div>
+</div>
