--- a/app/views/articles/_form-new-article.html.erb
+++ b/app/views/articles/_form-new-article.html.erb
@@ -21,5 +21,10 @@
                 as: :text,
                 input_html: { autocomplete: "text" }%>
     </div>
+    <div class="field">
+     <%= f.label :text, 'Text ' %>
+      <br>
+      <%= f.file_field :image %>
+    </div>
   <%= f.button :submit, "Submit your Article!"%>
 <% end %>
