--- a/app/views/categories/_category_box.html.erb
+++ b/app/views/categories/_category_box.html.erb
@@ -1,4 +1,5 @@
 <span class="box">
-  <p class="title"> <%= name %></p>
-  <p class="title"><%= article %> </p>
+  <%=category.last_article  %>
+  <p class="title categ-name"> <%= category.name %></p>
+  <p class="title last-article-title"><%= category.last_title %> </p>
 </span>
