--- a/app/views/articles/_form-new-article.html.erb
+++ b/app/views/articles/_form-new-article.html.erb
@@ -22,7 +22,7 @@
                 input_html: { autocomplete: "text" }%>
     </div>
     <div class="field">
-     <%= f.label :text, 'Text ' %>
+     <%= f.label :text, 'Image ' %>
       <br>
       <%= f.file_field :image %>
     </div>
