--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
     <div class="foot-logo">
       <a href="/"><img src="/" alt="logo" class="logo"></a>
       </div>
-      <div class="privacy-and-copyright center">
+      <div class="privacy-and-copyright">
         <span class="privacy-terms">
           <a href="categories/index.html" class="privacy">Privacy Policy</a>
           <a href="/" class="terms">Terms & Conditions</a>
