--- a/app/views/categories/_category_box.html.erb
+++ b/app/views/categories/_category_box.html.erb
@@ -1,5 +1,16 @@
 <span class="box">
-  <%= display_image(article)  %>
-  <p class="title categ-name"> <%= category_last_article.category_name %></p>
-  <p class="title last-article-title"><%= category_last_article.title %> </p>
+
+  <div class="box-img" style='background-image: url(<%= display_image(article.first.image)  %>);'>
+    <a href="<%= 'category/show/' + category_last_article.category_id.to_s %>">
+      <div class="titles">
+        <p class="title categ-name">
+          <%= category_last_article.category_name %>
+        </p>
+        <p class="title last-article-title">
+          <%= category_last_article.title %>
+        </p>
+      </div>
+    </a>
+  </div>
+
 </span>
