--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,9 +1,14 @@
 <div class="featured">
-  <%= render partial: 'articles/featured', locals: {featured_article: @featured_article} %>
+  <a href="/">
+    <%= render partial: 'articles/featured', locals: {featured_article: @featured_article} %>
+  </a>
 </div>
 <div class="categories-rows">
-<% @categories_last_articles.each do |category_last_article| %>
-  <% @article = @last_articles_list.where(id: category_last_article.id) %>
-  <%= render partial: 'category_box', locals: { category_last_article: category_last_article, article: @article } %>
-<% end %>
+
+    <% @categories_last_articles.each do |category_last_article| %>
+
+        <% @article = @last_articles_list.where(id: category_last_article.id) %>
+        <%= render partial: 'category_box', locals: { category_last_article: category_last_article, article: @article } %>
+    <% end %>
+
 </div>
