--- a/app/views/articles/_featured.html.erb
+++ b/app/views/articles/_featured.html.erb
@@ -1,5 +1,5 @@
-<div class="featured">
-  <div class="box-img" style='background-image: url(<%= display_image(featured_article.image)%>);'>
-    <p class="title orange"> <%= featured_article.title %></p>
+<div class="box-img" style='background-image: url(<%= display_image(featured_article.image)%>);'>
+<div class="titles">
+  <p class="title orange"> <%= featured_article.title %></p>
   </div>
 </div>
