--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,9 +1,12 @@
-<div class="article_index_row">
-    <% @articles.each do |article| %>
-        <div class="article-two-boxes">
-            <%= render partial: 'img_box', locals: { article: article } %>
-            <%= render partial: 'text_box', locals: { article: article   } %>
+<div class="row_set">
+    <% @articles.each_slice(2) do |couple_of_articles| %>
+        <div class="row">
+          <% couple_of_articles.each do |article| %>
+            <div class="half-row">
+              <%= render partial: 'text_box', locals: { article: article } %>
+              <%= render partial: 'img_box', locals: { article: article } %>
+            </div>
+          <% end %>
         </div>
     <% end %>
-
 </div>
