--- a/app/views/categories/_category_box.html.erb
+++ b/app/views/categories/_category_box.html.erb
@@ -1,16 +1,14 @@
 <span class="box">
-
   <div class="box-img" style='background-image: url(<%= display_image(article.image)  %>);'>
     <a href="<%= 'category/show/' + article.category_id.to_s %>">
       <div class="titles">
-        <p class="title categ-name">
+        <p class="categ-name">
           <%= article.category_name %>
         </p>
-        <p class="title last-article-title">
+        <p class="last-article-title">
           <%= article.title %>
         </p>
       </div>
     </a>
   </div>
-
 </span>
