--- a/app/views/categories/_category_box.html.erb
+++ b/app/views/categories/_category_box.html.erb
@@ -1,5 +1,5 @@
 <span class="box">
-  <div class="box-img" style='background-image: url(<%= display_image(article.image)  %>);'>
+  <div class="box-img" style='background-image: url(<%= display_image(article.image_data)  %>);'>
     <a href="<%= 'category/show/' + article.category_id.to_s %>">
       <div class="titles">
         <p class="categ-name">
