--- a/app/views/articles/_form-new-article.html.erb
+++ b/app/views/articles/_form-new-article.html.erb
@@ -22,8 +22,9 @@
                 input_html: { autocomplete: "text" }%>
     </div>
     <div class="field">
-     <%= f.label :text, 'Image ' %>
+     <%= f.label :image, 'Image ' %>
       <br>
+      <%= f.hidden_field :image, value: f.object&.cached_image_data %>
       <%= f.file_field :image %>
     </div>
   <%= f.button :submit, "Submit your Article!"%>
