--- a/app/views/categories/_category_box.html.erb
+++ b/app/views/categories/_category_box.html.erb
@@ -6,7 +6,7 @@
           <%= article.category_name %>
         </p>
         <p class="last-article-title">
-          <%= article.title %>
+          <%= article.title.truncate(35) %>
         </p>
       </div>
     </a>
