--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -40,6 +40,21 @@
     text-overflow: ellipsis;
   }
 
+  @mixin width-height-100{
+    width: 100%;
+    height: 100%;
+  }
+
+  @mixin roboto-bold {
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: 700;
+  }
+
+  @mixin flex-column{
+    display: flex;
+    flex-flow: column;
+  }
+
   // ***** TAGs *****
 
   *{
@@ -88,11 +103,11 @@
   justify-content: space-between;
   display: flex;
   height: 10vh;
+  min-height: 35px;
   align-items: center;
   padding: 0 15px;
   color: white;
   font-size: 0.9rem;
-
  }
 
  input{
@@ -163,13 +178,21 @@ label{
   width: 20%;
 }
 
+.social-logos{
+  width: 110px;
+  height: 30px;
+  display: flex;
+  justify-content: space-around;
+}
+
 .social-logo{
   width: 30px;
   height: 30px;
   border-radius: 50%;
   background-color: $orange;
   display:flex;
-  @include bkg-img
+  @include bkg-img;
+  background-size: 20px 20px;
 }
 
 .orange {
@@ -182,28 +205,22 @@ label{
 }
 
 .titles{
-  width: 100%;
-  height: 100%;
-   padding: 20px;
-   display: flex;
-   flex-flow: column;
-   justify-content: space-between;
+  @include flex-column;
+  @include width-height-100;
+  padding: 20px;
+  justify-content: space-between;
 }
 
 .form{
+  @include flex-column;
+  @include center;
   background-color: white;
   width: 70vw;
   height: auto;
   padding: 50px;
-  @include center;
-  flex-direction: column;
 }
 
-.field{
-  margin-top: 15px;
-}
-
-.button{
+.field, .button{
   margin-top: 15px;
 }
 
@@ -214,15 +231,14 @@ label{
 }
 
  .logo {
+  @include roboto-bold;
+  @include center;
   text-transform: none;
   font-size: 1.5rem;
   margin-left: 30px;
   width: 200px;
-  @include center;
   justify-content: flex-start;
   height: 50%;
-  font-family: 'Roboto Condensed', sans-serif;
-  font-weight: 700;
   border-bottom:  medium solid $orange;
  }
 
@@ -236,8 +252,8 @@ label{
  }
 
  .container{
-   width: 100%;
-   height: 100%;
+   margin-top: 1%;
+   @include width-height-100;
    @include center;
  }
 
@@ -247,30 +263,22 @@ label{
   }
 
  .box{
-   height: 100%;
-   width: 100%;
+   @include flex-column;
+   @include width-height-100;
+   @include truncate-txt;
    position:relative;
    background-color: #7a7a7a;
-   display:flex;
-   flex-direction: column;
    justify-content: space-between;
-   @include truncate-txt();
    white-space: normal;
  }
 
- .last-article-title {
-   color: $brown;
- }
-
  .box-img{
-   width: 100%;
-   height: 100%;
+   @include width-height-100;
    @include bkg-img
  }
 
  .category-link {
-   width: 100%;
-   height: 100%;
+   @include width-height-100;
  }
 
  .text-box{
@@ -285,12 +293,10 @@ label{
  }
 
  .article-content{
-   height: 100%;
-   width: 100%;
-   display: flex;
-   flex-flow: column;
-   justify-content: space-between;
-   padding: 20px;
+  @include width-height-100;
+  @include flex-column;
+  justify-content: space-between;
+  padding: 20px;
  }
 
   .article-content .categ-name {
@@ -302,9 +308,19 @@ label{
    font-size: 0.8rem;
  }
 
+  .article-title{
+  color: black;
+}
+
+.last-article-title{
+  color: white;
+  font-size: 1rem;
+  font-weight: bolder;
+}
+
  .article-text{
    overflow-wrap: break-word;
-   font-size: 0.9rem;
+   font-size: 0.8rem;
    font-weight: 500;
    padding: 10px 0;
   }
@@ -322,7 +338,6 @@ label{
    width: 100%;
    display: flex;
   }
-
 
  .half-row{
    @include center;
@@ -357,27 +372,29 @@ label{
    height: 50vh;
    width: 100%;
  }
+ .down{
+   justify-content: flex-end;
+ }
+ .featured-text{
+   color: white;
+   margin-top: 20px;
+ }
 
-
- .article-title{
-  color: black;
+.twitter{
+  background-image: url("twitter.png");
 }
-
-.last-article-title{
-  color: white;
-  font-size: 1rem;
-  font-weight: bolder;
+.twitter:hover{
+  background-image: url("twitter-white.png");
 }
-
-.article-text{
-  font-size: 0.7rem;
+.github{
+  background-image: url("github.png");
 }
-
-.down{
-  justify-content: flex-end;
+.github:hover{
+  background-image: url("github-white.png");
 }
-
-.featured-text{
-  color: white;
-  margin-top: 20px;
+.linkedin{
+  background-image: url("linkedin.png");
+}
+.linkedin:hover{
+  background-image: url("linkedin-white.png");
 }
