--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,9 +44,11 @@
       </div>
       <div class="social">
         <span class="connect">Connect with me:</span>
-        <a href="https://twitter.com/phfdonda"><span class="social-logo center twitter"> <img src="./docs/twitter.png" alt="t"> </span></a>
-        <a href="https://github.com/phfdonda"><span class="social-logo center github"><img src="./docs/twitter.png" alt="t"></span></a>
-        <a href="https://www.linkedin.com/in/pedro-donda/"><span class="social-logo center linkedin"><img src="./" alt="t"></span></a>
+        <span class="social-logos">
+          <a href="https://twitter.com/phfdonda"><span class="social-logo center twitter"></span></a>
+          <a href="https://github.com/phfdonda"><span class="social-logo center github"></span></a>
+          <a href="https://www.linkedin.com/in/pedro-donda/"><span class="social-logo center linkedin"></span></a>
+        </span>
       </div>
     </footer>
   </body>
