--- a/app/views/categories/_category_box.html.erb
+++ b/app/views/categories/_category_box.html.erb
@@ -1,6 +1,7 @@
 <span class="box">
   <div class="box-img" style='background-image: url(<%= display_image(article.image_data)  %>);'>
     <a href="<%= 'category/show/' + article.category_id.to_s %>">
+      <p hidden="true">categ-link</p>
       <div class="titles">
         <p class="categ-name">
           <%= article.category_name %>
