--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -135,6 +135,7 @@ label{
   width: 100%;
   position: absolute;
   @include center;
+  z-index: 100;
 }
 
 .flash p{
@@ -372,6 +373,10 @@ label{
    height: 50vh;
    width: 100%;
  }
+
+ .featured .box-img{
+   box-shadow: inset 0 -110px 40px -10px rgba(0, 0, 0, 0.8)
+ }
  .down{
    justify-content: flex-end;
  }
@@ -397,4 +402,8 @@ label{
 }
 .linkedin:hover{
   background-image: url("linkedin-white.png");
+}
+
+.shadow{
+  box-shadow: inset 0 -60px 40px -10px rgba(0, 0, 0, 0.8), inset 0 60px 40px -10px rgba(0, 0, 0, 0.5);
 }
