--- a/app/views/articles/_img_box.html.erb
+++ b/app/views/articles/_img_box.html.erb
@@ -1,5 +1,5 @@
 <span class="box">
-    <a href="<%= 'articles/show/' + article.id.to_s %>" class="category-link">
+    <a href="/" class="category-link">
       <div class="box-img" style='background-image: url(<%= display_image(article.image_data) %>);'></div>
     </a>
 </span>
